# grpc_image_client_example

./: .gitignore  .gitlab-ci.yml  CMakeLists.txt  Dockerfile  README.md
protobuf_msgs/: image_interface.proto
src/: grpc_image_client.cpp  image_utils.cpp  image_utils.h
